fixed slider on tablets

--- a/src/components/Creations/Creations.scss
+++ b/src/components/Creations/Creations.scss
@@ -146,7 +146,7 @@
     @include tablet {
       gap: 32px;
 
-      font-size: 1.5rem;
+      font-size: 1.25rem;
     }
 
     @include mobile {
@@ -162,7 +162,7 @@
       letter-spacing: 4px;
 
       @include tablet {
-        font-size: 2.5rem;
+        font-size: 2rem;
       }
 
       @include mobile {
@@ -179,8 +179,8 @@
     object-position: center;
 
     @include tablet {
-      width: 300px;
-      height: 300px;
+      width: 250px;
+      height: 250px;
     }
 
     @include mobile {
